style: add font roboto

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,3 @@
-@import url(./vendor/normalize.css);
-@import url(./vendor/fonts/inter/inter.css);
+@import-normalize;
+
+@import url(./vendor/fonts/roboto/roboto.scss);
