--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,3 +1,15 @@
-.app {
-  font-family: 'Roboto', Arial, sans-serif;
+@import '../../utils/styles/constants';
+
+body {
+  margin: 0;
+
+  .app {
+    font-family: $fonts;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    width: 100%;
+    max-width: $width-pages;
+    margin: 0 auto;
+  }
 }
