feat: add banner

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -9,7 +9,7 @@ body {
     grid-template-columns: 1fr;
     justify-items: center;
     width: 100%;
-    max-width: $width-pages;
+    max-width: $widthPages;
     margin: 0 auto;
   }
 }
