--- a/src/utils/styles/_constants.scss
+++ b/src/utils/styles/_constants.scss
@@ -1,4 +1,5 @@
-$width-pages: 1440px;
+$widthPages: 1440px;
 $fonts: 'Roboto', Arial, sans-serif;
 $fontColorLight: #fff;
 $fontColorDark: #000;
+$buttonBackground: #ff4a32
