--- a/src/utils/styles/_constants.scss
+++ b/src/utils/styles/_constants.scss
@@ -2,4 +2,5 @@ $widthPages: 1440px;
 $fonts: 'Roboto', Arial, sans-serif;
 $fontColorLight: #fff;
 $fontColorDark: #000;
-$buttonBackground: #ff4a32
+$buttonBackground: #ff4a32;
+$backgroundDark: #000;
