--- a/src/components/Accessories/Accessories.module.scss
+++ b/src/components/Accessories/Accessories.module.scss
@@ -1,4 +1,5 @@
 @import '../../utils/styles/constants';
+@import '../../utils/styles/mixins';
 
 .accessories {
   margin-top: 54px;
@@ -30,5 +31,72 @@
   .accessories__list {
     width: 100%;
     max-width: 1440px;
+    margin-top: 40px;
+    display: flex;
+    column-gap: 20px;
+  }
+
+  .accessory {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+
+    .accessory__img {
+      width: 186px;
+      height: 186px;
+    }
+
+    .accessory__name {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 1.2;
+      text-align: center;
+      color: #FF4A32;
+      width: 100%;
+      max-width: 166px;
+      margin: 13px auto 0;
+    }
+
+    .accessory__name:hover {
+      @include hover;
+    }
+
+    .accessory__price {
+      display: block;
+      text-align: center;
+      color: #373737;
+      width: 100%;
+      max-width: 166px;
+      margin: 5px auto 0;
+    }
+
+    .accessory__price_hidden {
+      display: none;
+    }
+
+    .accessory__otherPrice {
+      display: none;
+      color: #FF4A32;
+    }
+
+    .accessory__otherPrice_visible {
+      display: inline;
+    }
+
+    .accessory__availability {
+      display: none;
+      margin: 5px auto 0;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 1.2;
+      text-align: center;
+      color: rgba(0, 0, 0, 0.3);
+    }
+
+    .accessory__availability_visible {
+      display: block;
+    }
   }
 }
