--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,6 +6,7 @@
   max-width: 1200px;
   width: 100%;
   justify-self: center;
+  align-self: end;
 
   .footer__text {
     margin: 20px 0 20px 10px;
