--- a/src/components/CartItem/CartItem.module.scss
+++ b/src/components/CartItem/CartItem.module.scss
@@ -27,6 +27,15 @@
     font-weight: normal;
   }
 
+  .cartItem__link {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .cartItem__link:hover {
+    @include hover;
+  }
+
   .cartItem__price {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
