--- a/src/components/ItemBoostedShop/ItemBoostedShop.module.scss
+++ b/src/components/ItemBoostedShop/ItemBoostedShop.module.scss
@@ -13,6 +13,14 @@
     width: 50px;
     height: 50px;
     margin: 223px auto 0;
+
+    @include media_930 {
+      margin-top: 100px;
+    }
+
+    @include media_590 {
+      margin-top: 50px;
+    }
   }
 
   .linksList__title {
@@ -25,6 +33,10 @@
     text-align: center;
     color: $fontColorLight;
     margin: 10px auto 0;
+
+    @include media_740 {
+      font-size: 18px;
+    }
   }
 
   .linksList__link {
@@ -38,6 +50,18 @@
     text-align: center;
     color: $fontColorLight;
     margin: 14px auto 230px;
+
+    @include media_930 {
+      margin-bottom: 100px;
+    }
+
+    @include media_740 {
+      font-size: 14px;
+    }
+
+    @include media_590 {
+      margin-bottom: 50px;
+    }
   }
 
   .linksList__link:hover {
