--- a/src/components/AboutBoosted/AboutBoosted.module.scss
+++ b/src/components/AboutBoosted/AboutBoosted.module.scss
@@ -7,10 +7,28 @@
   justify-content: center;
   color: #000;
 
+  @include media_930 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include media_440 {
+    grid-template-columns: 1fr;
+  }
+
   .aboutBoosted__logo {
     grid-column: 1 / 2;
     grid-row: 1 / 5;
     margin: 50px auto 0;
+
+    @include media_740 {
+      width: 100px;
+    }
+
+    @include media_440 {
+      grid-row: 1 / 2;
+      margin-top: 20px;
+      margin-left: 20px;
+    }
   }
 
   .aboutBoosted__title {
@@ -20,16 +38,39 @@
     line-height: 1.5;
     margin-top: 50px;
     margin-bottom: 0;
+
+    @include media_740 {
+      font-size: 18px;
+    }
   }
 
   .aboutBoosted__title_place_links {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+
+    @include media_440 {
+      grid-row: 2 / 3;
+      grid-column:  1 / 2;
+      margin-left: 20px;
+      margin-top: 10px;
+    }
   }
 
   .aboutBoosted__title_place_text {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+
+    @include media_930 {
+      grid-column: 1 / 3;
+      grid-row: 5 / 6;
+      margin-top: 0;
+      margin-left: 20px;
+    }
+
+    @include media_440 {
+      grid-row: 4 / 5;
+      grid-column:  1 / 2;
+    }
   }
 
   .aboutBoosted__links {
@@ -42,11 +83,26 @@
     margin-bottom: 50px;
     margin-top: 10px;
     row-gap: 5px;
+
+    @include media_740 {
+      margin-bottom: 30px;
+    }
+
+    @include media_440 {
+      grid-row: 3 / 4;
+      grid-column:  1 / 2;
+      margin-top: 10px;
+      margin-left: 20px;
+    }
   }
 
   .aboutBoosted__link {
     text-decoration: none;
     color: inherit;
+
+    @include media_740 {
+      font-size: 14px;
+    }
   }
 
   .aboutBoosted__link:hover {
@@ -64,6 +120,18 @@
     font-size: 14px;
     line-height: 1.5;
     margin-top: 10px;
+
+    @include media_930 {
+      grid-column: 1 / 3;
+      grid-row: 6 / 7;
+      margin-left: 20px;
+    }
+
+    @include media_440 {
+      grid-row: 5 / 6;
+      grid-column:  1 / 2;
+      max-width: 270px;
+    }
   }
 
   .aboutBoosted__address {
@@ -75,6 +143,18 @@
     font-size: 13px;
     line-height: 1.62;
     padding: 0;
+
+    @include media_930 {
+      grid-column: 1 / 3;
+      grid-row: 8 / 9;
+      margin-left: 20px;
+      margin-bottom: 20px;
+    }
+
+    @include media_440 {
+      grid-row: 6 / 7;
+      grid-column:  1 / 2;
+    }
   }
 
   .aboutBoosted__line_newLine {
