--- a/src/components/BoostedShop/BoostedShop.module.scss
+++ b/src/components/BoostedShop/BoostedShop.module.scss
@@ -1,4 +1,5 @@
 @import '../../utils/styles/constants';
+@import '../../utils/styles/mixins';
 
 .boostedShop {
   width: 100%;
@@ -12,12 +13,24 @@
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
-    line-height: 1.15px;
+    line-height: 1.15;
     text-align: center;
     color: $fontColorDark;
     text-align: center;
     margin: 52px auto 0;
-  }
+
+      @include media_740 {
+        font-size: 26px;
+      }
+
+      @include media_590 {
+        max-width: 350px;
+      }
+
+      @include media_440 {
+        max-width: 300px;
+      }
+    }
 
   .text {
     width: 100%;
@@ -29,6 +42,20 @@
     text-align: center;
     color: $fontColorDark;
     margin: 20px auto 0;
+
+    @include media_740 {
+      max-width: 400px;
+    }
+
+    @include media_740 {
+      font-size: 14px;
+    }
+
+    @include media_440 {
+      font-size: 12px;
+      padding: 0 5px;
+      max-width: 280px;
+    }
   }
 
   .text::after {
@@ -48,6 +75,10 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     width: 100%;
+
+    @include media_930 {
+      padding: 0 15px;
+    }
 
     .linksList__item_boards {
       background-image: url(../../images/boosted-boards.png);
