--- a/src/components/Brands/Brands.module.scss
+++ b/src/components/Brands/Brands.module.scss
@@ -1,4 +1,5 @@
 @import '../../utils/styles/constants';
+@import '../../utils/styles/mixins';
 
 .brands {
   background-color: $backgroundDark;
@@ -7,13 +8,35 @@
     padding: 0;
     margin: 18px auto;
     list-style-type: none;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     column-gap: 20px;
-    justify-content: center;
+    justify-items: center;
+
+    @include media_740 {
+      column-gap: 10px;
+    }
+
+    @include media_590 {
+      grid-template-columns: repeat(2, 1fr);
+      row-gap: 20px;
+    }
 
     .brandsList__item {
       .brandsList__brand {
         width: 280px;
+
+        @include media_1200 {
+          width: 200px;
+        }
+
+        @include media_930 {
+          width: 150px;
+        }
+
+        @include media_740 {
+          width: 120px;
+        }
       }
     }
   }
