--- a/src/components/Shop/Shop.module.scss
+++ b/src/components/Shop/Shop.module.scss
@@ -1,3 +1,5 @@
+@import '../../utils/styles/mixins';
+
 .shop {
   margin-top: 45px;
   width: 100%;
@@ -8,6 +10,28 @@
     padding: 0;
     margin: 0;
     list-style-type: none;
+
+    @include media_1200 {
+      justify-items: center;
+    }
+
+    @include media_930 {
+      grid-template-columns: repeat(2, 1fr);
+
+      .linksList__item_plase_third {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+      }
+    }
+
+    @include media_440 {
+      grid-template-columns: 1fr;
+
+      .linksList__item_plase_third {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+      }
+    }
 
     .linksList__item_place_stealth {
       background-image: url(../../images/shop-boosted-steslth.png);
