--- a/src/components/Videos/Videos.module.scss
+++ b/src/components/Videos/Videos.module.scss
@@ -1,7 +1,8 @@
+@import '../../utils/styles/mixins';
+
 .videos {
   width: 100%;
   margin-top: 55px;
-  padding: 0 10%;
   box-sizing: border-box;
 
   .videosList {
@@ -9,11 +10,22 @@
     padding: 0;
     list-style-type: none;
     display: flex;
-    column-gap: 20px;
+    justify-content: space-around;
+
+    @include media_1200 {
+      flex-direction: column;
+      align-items: center;
+      row-gap: 20px;
+    }
 
     .videosList__item {
       .videosList__video {
         border: none;
+
+        @include media_590 {
+          width: 300px;
+          height: auto;
+        }
       }
     }
   }
