--- a/src/components/Accessories/Accessories.module.scss
+++ b/src/components/Accessories/Accessories.module.scss
@@ -2,10 +2,28 @@
 @import '../../utils/styles/mixins';
 
 .accessories {
-  margin-top: 54px;
+  margin: 54px auto 0;
   width: 100%;
   display: flex;
   flex-direction: column;
+  max-width: 1190px;
+  align-items: center;
+
+  @include media_1200 {
+    max-width: 900px;
+  }
+
+  @include media_930 {
+    max-width: 710px;
+  }
+
+  @include media_740 {
+    max-width: 560px;
+  }
+
+  @include media_590 {
+    max-width: 300px;
+  }
 
   .title {
     width: 100%;
