--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -1,8 +1,19 @@
+@import '../../utils/styles/mixins';
+
 .cart {
   display: grid;
   grid-template-columns: 2fr 1fr;
   column-gap: 30px;
   width: 100%;
+
+  @include media_930 {
+    grid-template-columns: 3fr 1fr;
+    column-gap: 10px;
+  }
+
+  @include media_740 {
+    grid-template-columns: 1fr;
+  }
 
   .cart__title {
     grid-column: 1 / 3;
@@ -11,6 +22,10 @@
     padding: 0;
     text-align: center;
     font-size: 30px;
+
+    @include media_740 {
+      grid-column: 1 / 2;
+    }
   }
 
   .cart__content {
@@ -23,6 +38,10 @@
       list-style-type: none;
       display: grid;
       row-gap: 20px;
+
+      @include media_740 {
+        margin: 0 20px;
+      }
     }
   }
 
@@ -32,6 +51,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+
+    @include media_740 {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+    }
 
     .cart__subtitle {
       margin: 0;
@@ -57,6 +81,15 @@
       letter-spacing: .3em;
       transition: .2s ease-in-out;
       padding: 15px 35px;
+
+      @include media_930 {
+        width: 150px;
+        padding: 10px 20px;
+      }
+
+      @include media_740 {
+        width: 200px;
+      }
     }
 
     .cart__button:hover {
@@ -78,8 +111,5 @@
     .cart__button:hover:before {
       transform: translate(4px, 4px);
     }
-
-
-
   }
 }
