--- a/src/components/CartItem/CartItem.module.scss
+++ b/src/components/CartItem/CartItem.module.scss
@@ -15,6 +15,12 @@
     max-width: 150px;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+
+    @include media_590 {
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+      justify-self: center;
+    }
   }
 
   .cartItem__name {
@@ -25,6 +31,16 @@
     font-size: 22px;
     color: $colorTitleItem;
     font-weight: normal;
+
+    @include media_590 {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      font-size: 18px;
+    }
+
+    @include media_440 {
+      font-size: 14px;
+    }
   }
 
   .cartItem__link {
@@ -42,6 +58,13 @@
     margin: 0;
     padding: 0;
     font-size: 18px;
+
+    @include media_590 {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+      margin-top: 15px;
+      font-size: 14px;
+    }
   }
 
   .cartItem__count {
@@ -49,6 +72,10 @@
     grid-row: 2 / 3;
     display: flex;
     column-gap: 15px;
+
+    @include media_590 {
+      grid-row: 2 / 3;
+    }
 
     .cartItem__buttonMinus {
       background-image: url(../../images/icon-minus.svg);
@@ -73,6 +100,10 @@
       margin: 0;
       padding: 0;
       font-size: 16px;
+
+      @include media_590 {
+        font-size: 14px;
+      }
     }
   }
 
@@ -82,6 +113,13 @@
     margin: 0;
     padding: 0;
     font-size: 16px;
+
+    @include media_590 {
+      grid-column: 2 / 3;
+      grid-row: 3 / 4;
+      margin-top: 15px;
+      font-size: 14px;
+    }
   }
 
   .cartItem__buttonDelete {
