--- a/src/components/Catalog/Catalog.module.scss
+++ b/src/components/Catalog/Catalog.module.scss
@@ -1,3 +1,5 @@
+@import '../../utils/styles/mixins';
+
 .catalog {
   display: grid;
   grid-template-columns: 1fr;
@@ -7,6 +9,10 @@
     text-align: center;
     margin: 0;
     padding: 0;
+
+    @include media_590 {
+      font-size: 26px;
+    }
   }
 
   .catalog__list {
@@ -18,5 +24,13 @@
     column-gap: 20px;
     row-gap: 20px;
     justify-items: center;
+
+    @include media_740 {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include media_590 {
+      grid-template-columns: 1fr;
+    }
   }
 }
