--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -1,12 +1,56 @@
 @import '../../utils/styles/mixins';
 
 .videoItem {
+  width: 560px;
+  height: 315px;
+  position: relative;
+  cursor: pointer;
+
+  @include media_590 {
+    width: 300px;
+    height: auto;
+  }
+
   &__video {
     border: none;
-
-    @include media_590 {
-      width: 300px;
-      height: auto;
-    }
+    width: 100%;
+    height: 100%;
   }
+
+  &__thumbnail {
+    width: 100%;
+    display: block;
+  }
+
+  &__button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: none;
+    width: 68px;
+    height: 48px;
+    background-color: transparent;
+    padding: 0;
+    outline: none;
+  }
+
+  &__buttonShape {
+    fill: #212121;
+    fill-opacity: .8;
+  }
+
+  &__button:focus &__buttonShape {
+    fill: #ff0000;
+    fill-opacity: 1;
+  }
+
+  &__buttonIcon {
+    fill: #fff;
+  }
+}
+
+.videoItem:hover .videoItem__buttonShape {
+  fill: #ff0000;
+  fill-opacity: 1;
 }
